<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.SplashActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="45pt"
        android:id="@+id/image1"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/image1"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/montserrat_bold"
        android:gravity="center"
        android:padding="20pt"
        android:text="@string/welcome_to_the_stunting_app_detector"
        android:textSize="25sp"
        android:textColor="@color/colorPrimary"
        android:id="@+id/text1"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text1"
        android:layout_centerHorizontal="true"
        android:width="330dp"
        android:text="@string/login"
        android:textColor="@color/white"
        android:fontFamily="@font/montserrat_bold"
        android:background="@drawable/button_shape"
        android:layout_marginTop="20dp"
        android:id="@+id/btn1"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn1"
        android:layout_centerHorizontal="true"
        android:width="330dp"
        android:text="@string/register"
        android:textColor="@color/white"
        android:fontFamily="@font/montserrat_bold"
        android:background="@drawable/button_shape"
        android:layout_marginTop="10dp"
        android:id="@+id/btn2"
        />

    <TextView
        android:id="@+id/text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn2"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/montserrat_semibold"
        android:text="@string/v_0_0_1"
        android:textColor="@color/black"
        android:textSize="15sp" />


</RelativeLayout>