<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/existingKidBox"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="8dp"
    android:layout_weight="1"
    android:background="@drawable/white_rounded"
    android:clickable="true"
    android:focusable="true"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="12dp">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- Arrow Button -->
        <RelativeLayout
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/circle_background"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/next"
                android:textColor="@color/colorPrimary"
                android:textSize="24sp" />
        </RelativeLayout>

        <!-- Kid's Logo Image -->
        <ImageView
            android:id="@+id/kidLogoImage"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="6dp"
            android:contentDescription="@string/kids_logo"
            android:src="@drawable/ic_kids"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Kid's Name -->
    <TextView
        android:id="@+id/kidName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="0dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/kids_name"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <!-- Kid's Age -->
    <TextView
        android:id="@+id/kidAge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/kids_age"
        android:textColor="@color/black"
        android:textSize="14sp" />


</LinearLayout>

