<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.LoginActivity">

    <ImageButton
        android:id="@+id/L_btn_1"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:src="@drawable/ic_back"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:layout_marginTop="25dp"
        android:layout_marginStart="20dp"
        app:tint="@color/colorPrimary"
        android:contentDescription="@string/back_button"
        />

    <ImageView
        android:id="@+id/L_image_1"
        android:layout_width="112dp"
        android:layout_height="110dp"
        android:layout_below="@id/L_btn_1"
        android:layout_centerHorizontal="true"
        android:src="@drawable/ic_logo" />

    <TextView
        android:id="@+id/L_text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login1"
        android:layout_below="@id/L_image_1"
        android:layout_centerHorizontal="true"
        android:textColor="@color/black"
        android:fontFamily="@font/montserrat_semibold"
        android:textSize="25sp"/>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:layout_below="@id/L_text1"
        android:layout_marginTop="50dp"
        android:id="@+id/R_ly1">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email_address"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp"
            android:fontFamily="@font/montserrat_bold"
            android:layout_marginBottom="8dp" />


        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/email_address"
            android:background="@drawable/edittext_border"
            android:padding="12dp"
            android:inputType="textEmailAddress"
            android:textColor="#000000"
            android:textColorHint="#AAAAAA"
            android:layout_marginBottom="16dp" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp"
            android:fontFamily="@font/montserrat_bold"
            android:layout_marginBottom="8dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:endIconMode="password_toggle"
            android:layout_marginBottom="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/edittext_border"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="#000000"
                android:textColorHint="#AAAAAA" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <Button
        android:id="@+id/L_btn_2"
        android:layout_width="380dp"
        android:layout_height="48dp"
        android:layout_below="@id/R_ly1"
        android:layout_centerHorizontal="true"
        android:text="@string/login"
        android:textColor="@color/white"
        android:fontFamily="@font/montserrat_bold"
        android:background="@drawable/button_shape"
        android:layout_marginTop="20dp"
        />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/L_btn_2"
        android:layout_marginTop="55dp"
        android:gravity="center">
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Don't have account?"
            android:fontFamily="@font/montserrat_regular"
            android:textSize="16sp"
            android:textColor="@color/black"/>
        <TextView
            android:id="@+id/createHere"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_here"
            android:fontFamily="@font/montserrat_semibold"
            android:textSize="16sp"
            android:textColor="@color/colorPrimary" />
    </LinearLayout>

</RelativeLayout>